--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -107,7 +107,19 @@
 	</servlet-mapping>
 	
 	
-	
+		<servlet>
+		<servlet-name>category</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/appServlet/category_servlet.xml</param-value>
+		</init-param>
+	</servlet>
+		
+	<servlet-mapping>
+		<servlet-name>category</servlet-name>
+		<url-pattern>*.cate</url-pattern>
+	</servlet-mapping>
 	
 	
 	
