--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -107,7 +107,7 @@
 	</servlet-mapping>
 	
 	
-		<servlet>
+	<servlet>
 		<servlet-name>category</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
@@ -119,6 +119,20 @@
 	<servlet-mapping>
 		<servlet-name>category</servlet-name>
 		<url-pattern>*.cate</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>page</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/appServlet/page_servlet.xml</param-value>
+		</init-param>
+	</servlet>
+		
+	<servlet-mapping>
+		<servlet-name>page</servlet-name>
+		<url-pattern>*.page</url-pattern>
 	</servlet-mapping>
 	
 	
