2020/10/14 - 회원가입, 로그인, 관리자, 메인 lsa

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -77,6 +77,8 @@
 	</servlet-mapping>
 	
 	
+	
+	
 	<servlet>
 		<servlet-name>member</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -88,8 +90,10 @@
 		
 	<servlet-mapping>
 		<servlet-name>member</servlet-name>
-		<url-pattern>*.mem</url-pattern>
+		<url-pattern>*.me</url-pattern>
 	</servlet-mapping>
+	
+	
 	
 	
 	<servlet>
@@ -148,24 +152,6 @@
 		<servlet-name>uspage</servlet-name>
 		<url-pattern>*.uspage</url-pattern>
 	</servlet-mapping>
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
 	
 	
 	
