--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -212,4 +212,18 @@
 		<url-pattern>*.userdetail</url-pattern>
 	</servlet-mapping>
 
+
+	<servlet>
+		<servlet-name>order</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/appServlet/order_servlet.xml</param-value>
+		</init-param>
+	</servlet>
+		
+	<servlet-mapping>
+		<servlet-name>order</servlet-name>
+		<url-pattern>*.od</url-pattern>
+	</servlet-mapping>
 </web-app>
