--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -226,4 +226,20 @@
 		<servlet-name>order</servlet-name>
 		<url-pattern>*.od</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>cart</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet
+		</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/appServlet/cart_servlet.xml
+			</param-value>
+		</init-param>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>cart</servlet-name>
+		<url-pattern>*.cart</url-pattern>
+	</servlet-mapping>
 </web-app>
