10/28 잘못된 프로젝트입니다. 김기현

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -229,12 +229,10 @@
 	
 	<servlet>
 		<servlet-name>cart</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet
-		</servlet-class>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/appServlet/cart_servlet.xml
-			</param-value>
+			<param-value>/WEB-INF/spring/appServlet/cart_servlet.xml</param-value>
 		</init-param>
 	</servlet>
 
